/**
 * Copyright Soramitsu Co., Ltd. All Rights Reserved.
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";
package iroha.network.proto;

import "block.proto";

message BlocksRequest {
  uint64 height = 1;
}

message BlockRequest {
  bytes hash = 1;
}

service Loader {
  rpc retrieveBlocks (BlocksRequest) returns (stream iroha.protocol.Block);
  rpc retrieveBlock (BlockRequest) returns (iroha.protocol.Block);
}
